--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,31 @@
-# docker run -d --volumes-from piafs-data --link mysql-piafs:mysql -p 80:80 demers/piafs-28juin2017
-PIAFS-291-28juin2017:
+PIAFS:
   ports:
-  - 80:80/tcp
-  labels:
-    io.rancher.sidekicks: PIAFS-291-28juin2017-data
-    io.rancher.container.pull_image: always
+  - 10080:80/tcp
   tty: true
-  image: demers/piafs_28juin2017
+  image: pierredalpe/docker_piafs
   links:
   - DB:mysql
   stdin_open: true
-# docker run --volumes-from mysql-piafs-data --name mysql-piafs -e MYSQL_USER=piafs -e MYSQL_PASSWORD=piafs -e MYSQL_DATABASE=piafs -e MYSQL_ROOT_PASSWORD=piafs -d mysql
+  volumes_from:
+  - PIAFS-data
+  environment:
+    DB_NAME: piafs-db-name
+    DB_PASS: piafs-db-pass
+    DB_HOST: mysql
+    DB_USER: piafs-db-user
+
+PIAFS-data:
+  command:
+  - /bin/true
+  tty: true
+  image: pierredalpe/docker_piafs
+  links:
+  - DB:mysql
+  stdin_open: true
+  volumes:
+  - ../PIAfS/backups:/backups
+
+
 DB:
   environment:
     MYSQL_DATABASE: piafs-db-name
@@ -18,35 +33,17 @@ DB:
     MYSQL_ROOT_PASSWORD: piafs-root-pass
     MYSQL_USER: piafs-db-user
   domainname: piafs-mysql
-  labels:
-    io.rancher.sidekicks: DB-data
-    io.rancher.container.pull_image: always
   tty: true
-  image: mysql
+  image: mariadb:10.0
   stdin_open: true
-# docker run -d --name piafs-data demers/piafs-28juin2017 false
-PIAFS-291-28juin2017-data:
-  labels:
-    io.rancher.container.pull_image: always
-    io.rancher.container.start_once: 'true'
-  command:
-  - /bin/true
-  tty: true
-  image: demers/piafs_28juin2017
-  links:
-  - DB:mysql
-  stdin_open: true
-# docker run --name mysql-piafs-data -d mysql false
-DB-data:
-  labels:
-    io.rancher.container.pull_image: always
-    io.rancher.container.start_once: 'true'
-  command:
-  - /bin/true
-  tty: true
-  image: mysql
-  volumes:
-  - /home/linuq/PIAFS/mysql:/var/lib/mysql
   volumes_from:
-  - DB
+  - DB-data
+
+DB-data:
+  command:
+  - /bin/true
+  tty: true
+  image: mariadb:10.0
+  volumes:
+  - ../PIAfS/mysql:/var/lib/mysql
   stdin_open: true
